Update CSS fixes for layout and image alignment issues

--- a/assets/css/layout-fixes.css
+++ b/assets/css/layout-fixes.css
@@ -64,3 +64,43 @@ img {
     display: inline-block;
     vertical-align: middle;
 }
+/* Fix for gradient background image */
+img[alt="gradient"] {
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    opacity: 0.7;
+
+/* Fix for gradient background image */
+.styles_stackContainer__nV_c2 {
+    position: relative;
+    overflow: hidden;
+}
+
+.styles_stackContainer__nV_c2 > img[alt="gradient"] {
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    opacity: 0.7;
+}
+
+/* Fix for card images */
+.styles_cardContainer__r_6Ua > img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+/* Fix for getStarted image */
+img[alt="getStarted"] {
+    width: 100%;
+    height: auto;
+    display: block;
+    margin: 2rem 0;
+}
